Finalizando Documentação da API no Swagger
